- Add indexed gatherers - Make CollectionX function return truly immutable lists